src/resources/elements/menu-bar.scss
menu-bar {
  .menu.bars {
    display: none;
  }
  @media only screen and (max-width: 767px) {
    .menu.main {
      display: none;
    }
    .menu.bars {
      display: flex;
      width: 100vw;
    }
    .sidebar-toggle {
      display: block;
    }
  }
  .username {
    margin-right: 1em;
    font-size: 1.2em;
  }
}

